# trame-oss

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  fuzz.yml  publish.yml  release.yml  vopr-nightly.yml
crates/trame-cli/: Cargo.toml  README.md
crates/trame-cli/src/: main.rs
crates/trame-cli/src/commands/: fmt.rs  info.rs  mod.rs
crates/trame-dst/: Cargo.toml  README.md
crates/trame-dst/benches/: prng_bench.rs
crates/trame-dst/src/: ci.rs  coverage.rs  fault.rs  io.rs  lib.rs  prng.rs  shrink.rs  simulation.rs
crates/trame-schema/: Cargo.toml  README.md
crates/trame-schema/src/: catalog.rs  lib.rs  types.rs  walker.rs
crates/trame-wire/: Cargo.toml  README.md
crates/trame-wire/benches/: parser_bench.rs
crates/trame-wire/src/: delimiters.rs  envelope.rs  error.rs  interchange.rs  lib.rs  parser.rs  segment.rs  writer.rs
crates/trame-wire/tests/: vopr_fuzz.rs
fuzz/: Cargo.toml  README.md
fuzz/corpus/x12/: minimal_270.edi  minimal_837.edi  minimal_997.edi
fuzz/targets/: delimiters.rs  element_access.rs  parse_interchange.rs  parse_segments.rs  roundtrip.rs  schema_walk.rs
