[workspace]
resolver = "3"
members = [
    "crates/trame-wire",
    "crates/trame-schema",
    "crates/trame-dst",
    "crates/trame-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
license = "Apache-2.0"
repository = "https://github.com/copyleftdev/trame"

[workspace.dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
trame-wire = { version = "0.1.0", path = "crates/trame-wire" }
trame-schema = { version = "0.1.0", path = "crates/trame-schema" }
trame-dst = { version = "0.1.0", path = "crates/trame-dst" }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
