[package]
name = "trame-cli"
description = "CLI toolkit for X12 EDI operations"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
trame-wire = { workspace = true }

[[bin]]
name = "trame"
path = "src/main.rs"

[lints]
workspace = true
