[package]
name = "trame-schema"
description = "X12 transaction set grammars and schema definitions"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
trame-wire = { workspace = true }

[lints]
workspace = true
